<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_cate_reboot_title">

        <EditTextPreference
            android:key="@string/pref_operator_country_key"
            android:title="@string/pref_operator_country"
            android:dialogTitle="@string/pref_operator_country"
            android:defaultValue="@string/pref_operator_country_default" />

        <EditTextPreference
            android:key="@string/pref_operator_code_key"
            android:inputType="number"
            android:title="@string/pref_operator_code"
            android:dialogTitle="@string/pref_operator_code"
            android:defaultValue="@string/pref_operator_code_default" />

        <EditTextPreference
            android:key="@string/pref_operator_name_key"
            android:title="@string/pref_operator_name"
            android:dialogTitle="@string/pref_operator_name"
            android:defaultValue="@string/pref_operator_name_default" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_cate_now_title">

        <CheckBoxPreference
            android:title="@string/pref_hide_launcher"
            android:defaultValue="false"
            android:summary="@string/pref_hide_launcher_summary"
            android:key="@string/pref_hide_launcher_key"/>
    </PreferenceCategory>

</PreferenceScreen>